manifests/ses-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ses-ingress
  namespace: ses
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:xxxxxx
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: "my-group"
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - ses.example.com
  rules:
  - host: ses.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ses-dash-nginx
            port:
              number: 80
